<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.juan.acrossquindio.AboutQuindioActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/carritomercado"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Descr"
                android:textSize="15sp"
                android:textStyle="italic"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DescrGeo"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:layout_weight="0.25"
                    android:layout_margin="5dp"
                    android:textColor="@color/brown"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DescrPob"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:layout_weight="0.25"
                    android:layout_margin="5dp"
                    android:textColor="@color/blueviolet"
                    android:gravity="center"/>
            </LinearLayout>
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/armenia"
                android:layout_margin="1dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
