<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    tools:context=".TourismActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:id="@+id/id_nameTour"
            android:text="@string/tvNameTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView android:id="@+id/id_ImgTour"
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:src="@drawable/parque_del_cafe_logo_verde_armenia_quindio_01"
                android:layout_weight="0.5"
                android:layout_margin="2dp"
                android:background="@color/white"/>
            <TextView   android:id="@+id/id_Desc1Tour"
                android:text="@string/Desc1Tour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="13sp"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:layout_weight="0.5"/>
        </LinearLayout>
        <TextView android:id="@+id/id_Desc2Tour"
        android:text="@string/Desc2Tour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:layout_gravity="center" android:gravity="center"/>
    </LinearLayout>

</LinearLayout>