<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1"
    android:background="@color/brown">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.55"
        android:background="@color/greenyellow"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_margin="2dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:text="@string/tvWelcome"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_gravity="center"/>

        <ListView android:id="@+id/id_ListStart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.45"
        android:layout_margin="2dp"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Desc_app_name"
                    android:textStyle="bold|italic"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/logomarcaquindio"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Desc_app_name2"
                    android:textStyle="bold|italic"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/panacabufalo"
                    android:scaleType="fitStart"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Desc_app_name3"
                    android:textStyle="bold|italic"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/krater"
                    android:scaleType="fitStart"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Desc_app_name4"
                    android:textStyle="bold|italic"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/parque_del_cafe1"
                    android:scaleType="fitStart"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>

